@@ -1,4 +1,5 @@
+export FX_PATH=/usr/share/openjfx/lib
 cd src
-javac -d ../bin com/orangomango/labyrinth/LabyrinthMain.java
+javac --module-path $FX_PATH --add-modules javafx.controls -d ../bin com/orangomango/labyrinth/LabyrinthMain.java
 cd ../bin
-java com.orangomango.labyrinth.LabyrinthMain
+java --module-path $FX_PATH --add-modules javafx.controls com.orangomango.labyrinth.LabyrinthMain
